* fix : 일반 게시판 생성(관리자, 학생회장, 부학생회장) 구현